--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="module" src="/js/app.js"></script>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        
+    </div>
 </body>
 </html>
